add android api level requirements to notification plugin

--- a/plugins/android-native/notifications/builder.html
+++ b/plugins/android-native/notifications/builder.html
@@ -148,7 +148,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Build Notification</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Build Notification</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-11+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -216,7 +223,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Auto Cancel</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Auto Cancel</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-11+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -258,7 +272,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Small Icon</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Small Icon</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-11+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -306,7 +327,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Color</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Color</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-21+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -354,7 +382,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Large Icon</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Large Icon</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-11+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -399,7 +434,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Calendar Time</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Calendar Time</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-11+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -506,7 +548,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Epoch Time Milli</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Epoch Time Milli</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-11+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -548,7 +597,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Time Now</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Time Now</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-11+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -577,7 +633,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Add Notification Action</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Add Notification Action</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-20+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -662,7 +725,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Interacted Result</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Interacted Result</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-11+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -697,7 +767,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Visibility</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Visibility</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-21+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -742,7 +819,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Get Current Epoch Time Milli</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Get Current Epoch Time Milli</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-1+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -774,7 +858,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Public Version</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Public Version</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-21+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -819,7 +910,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Big Text</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Big Text</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-16+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -861,7 +959,14 @@
                 </div>
 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Set Notification Big Picture</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Set Notification Big Picture</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-16+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
