--- a/plugins/android-native/notifications/permissions.html
+++ b/plugins/android-native/notifications/permissions.html
@@ -154,7 +154,14 @@
                     </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Request Notification Permission</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Request Notification Permission</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-33+</div>
+                        </div>
+                    </div>    
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -187,7 +194,14 @@
                 </div>
                 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Revoke Notification Permission</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Revoke Notification Permission</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-33+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -203,7 +217,14 @@
                     </div>
                 </div>                
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Should Show Permission Rationale</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Should Show Permission Rationale</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-33+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
@@ -232,7 +253,14 @@
                 </div>
                 
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">Has Notification Permission</h1>
+                    <div class="row">
+                        <div class="col-auto" style="padding-right: 0">
+                            <h1 class="h3 text-white-shadow">Has Notification Permission</h1>
+                        </div>
+                        <div class="col text-right" style="padding-top: 14px">
+                            <div class="h6 text-white-shadow">API-33+</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info" style="border-top-left-radius: 20px;">
