ensure pak and io store are correctly configured

--- a/plugins/android-native/notifications/importing_images.html
+++ b/plugins/android-native/notifications/importing_images.html
@@ -150,7 +150,7 @@
                                 Double click your recently created Unreal Engine texture object to open a new tab showing the textures settings.
                             </p>
                             <li class="list-group-item">
-                                Update Settings
+                                Update Texture Settings
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
                                 Within the texture settings for this texture object, update the:
@@ -169,6 +169,29 @@
                             <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 10px;">
                                 <div style="display: flex; justify-content: center; align-items: center;">
                                     <img style="max-width: 80%" src="../../../images/AndroidNotifications/Texture_Settings.png">
+                                </div>
+                            </div>
+                            <li class="list-group-item">
+                                Update Package Settings
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Within your Project Settings, update the your Package Settings to ensure the images are accesible from your package.
+                                These should already be defaulted in the correct configuration.</br>
+                            </p>
+                            <p class="content" style="padding-left: 10px">
+                                Go to <span style="font-weight: 500">Project Settings</span> -> <span style="font-weight: 500">Project</span> -> <span style="font-weight: 500">Packaging</span> and:
+                            </p>
+                            <table class="two-column-table" style="margin-bottom: 20px">
+                                <tr>
+                                    <td class="blue-diamond">Ensure "<span style="font-weight: 500">Use Pak File</span>" is set to <span style="font-weight: 500">true</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="blue-diamond">Ensure "<span style="font-weight: 500">Use Io Store</span>" is set to <span style="font-weight: 500">false</span></td>
+                                </tr>
+                            </table>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 10px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 80%" src="../../../images/AndroidNotifications/Package_Settings.png">
                                 </div>
                             </div>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
