--- a/plugins/android-native/notifications/getting_started.html
+++ b/plugins/android-native/notifications/getting_started.html
@@ -135,7 +135,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="">Official Unreal Engine Marketplace</a> (disabled untill go live).
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/4554c71fa94d46b19249e5b120393759">Official Unreal Engine Marketplace</a>
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
