--- a/plugins/release/notes/android_notifications.html
+++ b/plugins/release/notes/android_notifications.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>Play Updates | Release Notes</title>
+    <title>Android Notifications | Release Notes</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -61,7 +61,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="android_notifications.html" style="padding-bottom: 0; padding-top: 0">
+                            <a class="nav-link active" href="android_notifications.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/AndroidNotifications/AdvancedNotifications_Plugin_Logo.png" alt="Android Sensors" class="dropdown-item-image">
                                 Android Notifications
                             </a>
@@ -103,7 +103,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="play_updates.html" style="padding-bottom: 0; padding-top: 0">
+                            <a class="nav-link inactive" href="play_updates.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/InAppUpdates/GooglePlay_InAppUpdates_Plugin_Logo.png" alt="Google Play Updates" class="dropdown-item-image">
                                 Play: Updates
                             </a>
@@ -115,7 +115,7 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="container border-bottom"
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Play Services: In-App Updates</h1>
+                    <h1 class="h2 text-white-shadow">Android Notifications</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="news-card expanded">
@@ -123,11 +123,11 @@
                             <div class="news-group-item">
                                 <div class="row">
                                     <div class="col-auto" style="padding-right: 0">
-                                        <img class="news-badge" src="../../../images/InAppUpdates/GooglePlay_InAppUpdates_Plugin_Logo.png">
+                                        <img class="news-badge" src="../../../images/AndroidNotifications/AdvancedNotifications_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Initial Release</div>
-                                        <div class="news-sub-title">2023-10-02</div>
+                                        <div class="news-sub-title">2024-05-23</div>
                                     </div>
                                     <div class="col text-right" style="padding-left: 10px">
                                         <div class="news-title">v1.0.0</div>
@@ -139,25 +139,15 @@
                                 <div class="row">
                                     <div class="col-auto">
                                         <img style="max-height: 156px; padding-top: 10px; padding-bottom: 10px"
-                                            src="../../../images/general/InAppUpdates_Thumbnail.png">
+                                            src="../../../images/general/Mobile_Notifications_Thumbnail.png">
                                     </div>
                                     <div class="col-auto" style="display:flex; align-items: center; margin: 0">
                                         <div class="news-info-details" style="font-weight: 500">
                                             <ul>
-                                                <li>Access Google Play Core Service In-App Updates</li>
-                                                <li>Detect Google Play Store Updates</li>
-                                                <li>Handle Immediate or Flexible Updates</li>
-                                                <li>Listener for Background Flexible Updates</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
-                                        <div class="news-info-details" style="font-weight: 500">
-                                            <ul>
-                                                <li>Check if an Update Type is Allowed</li>
-                                                <li>Launch an Update Request</li>
-                                                <li>Install a Flexible Update</li>
-                                                <li>Detect Interrupted Updates</li>
+                                                <li>Notification Permissions</li>
+                                                <li>Build and Manage Notification Channels/Groups</li>
+                                                <li>Notification Scheduling</li>
+                                                <li>Direct Image Input in Blueprints</li>
                                             </ul>
                                         </div>
                                     </div>
