--- a/plugins/release/notes/play_saved_games.html
+++ b/plugins/release/notes/play_saved_games.html
@@ -39,7 +39,7 @@
         <div class="row" style="margin-left: 7px">
             <button class="mobile-button"></button>
             <!-- Side Navigation Bar -->
-            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom" style="height: 590px">
+            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom" style="height: 640px">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -58,6 +58,12 @@
                             <a class="nav-link inactive" href="android_sensors.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_Logo.png" alt="Android Sensors" class="dropdown-item-image">
                                 Android Sensors
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="android_notifications.html" style="padding-bottom: 0; padding-top: 0">
+                                <img src="../../../images/AndroidNotifications/AdvancedNotifications_Plugin_Logo.png" alt="Android Sensors" class="dropdown-item-image">
+                                Android Notifications
                             </a>
                         </li>
                         <li class="nav-item">
