update overview page

--- a/plugins/android-native/utility-pack/overview.html
+++ b/plugins/android-native/utility-pack/overview.html
@@ -127,18 +127,18 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            <b>Android Native: Utility Pack</b>
+                            <b>Android Native: Utility Pack</b> (In development)
                         </p>
                         <p class="content">
-                            Android notifications are crucial means of communication, appearing outside of your application's UI.
-                            They serve various purposes, from reminding users of important events to enticing them to re-engage with your application. 
+                            Introducing the Android Utility Pack, a comprehensive Unreal Engine plugin designed to enhance your Android mobile application's functionality and user experience.
+                            This versatile utility pack empowers developers with a suite of essential tools.
                         </p>
                         <p class="content">
-                            With this Unreal Engine plugin, you gain the power to craft custom notifications, leveraging features like direct texture integration for images within blueprints.
-                            Once created, these notifications can be promptly displayed or scheduled for future delivery.
+                            With this Utility Pack, you can seamlessly integrate these critical utilities into your application, ensuring smooth performance and robust functionality.
+                            Effortlessly monitor and log application behavior, managing situations that would otherwise be impossible.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            Enhance user engagement and retention in your Unreal Engine Android mobile application today by integrating notifications seamlessly.
+                            This plugin serves as a repository for smaller, yet crucial functionalities that might not warrant standalone plugins, ensuring your development process remains streamlined and efficient.
                         </p>
                     </div>
                     <div class="info" style="margin-top: 20px">
@@ -146,30 +146,36 @@
                             <b>The Unreal Engine Plugin</b>
                         </p>
                         <p class="content">
-                            The Unreal Engine plugin for Android Notifications SDK API is an easy to use tool which makes use of a builder sender style.
-                            The entire plugin is entirely exposed to blueprints allowing you to build your notifications up as much as you want in advance and send them when the time is right.
+                            The Unreal Engine plugin for the Mobile Utility Pack is an easy-to-use tool with all its functionality exposed to Unreal Engine blueprints.
+                            Much of its functionality can be configured within the Project Settings, providing you with complete flexibility in how it operates.
                         </p>
                         <p class="content">
                             Some key features include:
                         </p>
                         <table class="two-column-table" style="margin-bottom: 10px">
                             <tr>
-                                <td class="blue-diamond">Direct Image Input in Blueprint Nodes</td>
+                                <td class="blue-diamond">Automatic Android UE Source Code Fixes</td>
                             </tr>
                             <tr>
-                                <td class="blue-diamond">Notification Scheduling</td>
+                                <td class="blue-diamond">Android ADB Logging</td>
                             </tr>
                             <tr>
-                                <td class="blue-diamond">Notification Permission Management</td>
+                                <td class="blue-diamond">Internet Connectivity Checks</td>
                             </tr>
                             <tr>
-                                <td class="blue-diamond">Notification Channel Management</td>
+                                <td class="blue-diamond">Android Lifecycle Events</td>
+                            </tr>
+                            <tr>
+                                <td class="blue-diamond">Android Battery Information</td>
+                            </tr>
+                            <tr>
+                                <td class="blue-diamond">SDK Version Detection</td>
                             </tr>
                         </table>
                     </div>
                     
                     <div style="display: flex; justify-content: center; align-items: center; padding-top: 10px;">
-                        <img src="../../../images/AndroidNotifications/Notification_Permission_All_BP_Nodes.png" style="width: 50%">
+                        <img src="../../../images/AndroidUtilityPack/All_Blueprints.png" style="width: 65%">
                     </div>
                     
                     <div style="margin-bottom: 250px">
