update battery functionality to be aware of sdk version

--- a/plugins/android-native/utility-pack/android_battery_info.html
+++ b/plugins/android-native/utility-pack/android_battery_info.html
@@ -163,7 +163,7 @@
                                 <td>bIsBatteryLow</td>
                                 <td>bool</td>
                                 <td>
-                                    A boolean indicating whether the battery is currently considered to be low.
+                                    <span style="font-weight: 500">[API-28+]</span> A boolean indicating whether the battery is currently considered to be low.
                                 </td>
                             </tr>
                             <tr>
