add menu items and index showcase

--- a/index.html
+++ b/index.html
@@ -59,6 +59,25 @@
       <h1 class="section-header" style="color:rgb(134, 207, 255)" >UNREAL ENGINE</h1>
       <div class="row">
         <div class="col-md-4 col-12 mb-5">
+          <a href="./plugins/android-native/utility-pack/overview.html" class="text-decoration-none">
+            <div class="card text-center card-custom lavender">
+              <img class="new-tag" alt='New!' src='images/NewTag.png' />
+              <div class="card-header card-header-custom">
+                <h5 style="margin-bottom: 0;">Android Utility Pack</h5>
+              </div>
+              <img src="images/AndroidUtilityPack/UtilityPack_Feature_Image.png" alt="...">
+              <div class="card-body card-body-custom">
+                <p class="card-text">
+                  Unreal Engine Android Utility Pack containing variouse tools and functionality to aid Android Game Developers.
+                </p>
+                <!-- <a href='https://www.unrealengine.com/marketplace/en-US/product/4554c71fa94d46b19249e5b120393759' class="btn btn-custom" target="_blank">
+                  <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
+                </a> -->
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/android-native/notifications/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom lavender">
               <img class="new-tag" alt='New!' src='images/NewTag.png' />
@@ -80,7 +99,6 @@
         <div class="col-md-4 col-12 mb-5">
             <a href="./plugins/google-play-services/base-services/overview.html" class="text-decoration-none">
               <div class="card text-center card-custom blue">
-                <img class="new-tag" alt='New!' src='images/NewTag.png' />
                 <div class="card-header card-header-custom">
                   <h5 style="margin-bottom: 0;">Play Base Services V2</h5>
                 </div>
@@ -99,7 +117,6 @@
         <div class="col-md-4 col-12 mb-5">
             <a href="./plugins/advertising/admob/overview.html" class="text-decoration-none">
               <div class="card text-center card-custom lava">
-                <img class="new-tag" alt='New!' src='images/NewTag.png' />
                 <div class="card-header card-header-custom">
                   <h5 style="margin-bottom: 0;">Advanced Admob Ads</h5>
                 </div>
