--- a/plugins/android-native/utility-pack/overview.html
+++ b/plugins/android-native/utility-pack/overview.html
@@ -135,7 +135,7 @@
                         </p>
                         <p class="content">
                             With this Utility Pack, you can seamlessly integrate these critical utilities into your application, ensuring smooth performance and robust functionality.
-                            Effortlessly monitor and log application behavior, managing situations that would otherwise be impossible.
+                            Effortlessly monitor and log application behaviour, managing situations that would otherwise be impossible.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             This plugin serves as a repository for smaller, yet crucial functionalities that might not warrant standalone plugins, ensuring your development process remains streamlined and efficient.
